networking/backend-deploy.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deploy
  namespace: netlab

spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
        - name: backend
          image: nginx
          ports:
            - containerPort: 80
