networking/db-deploy.yml
apiVersion: apps/v1
kind: Deployment

metadata:   
  name: db-deploy
  namespace: netlab

spec: 
  replicas: 1
  selector:
    matchLabels:
      app: db 
  
  template:
    metadata:
      labels:
        app: db 
    spec: 
      containers:
      - name: db
        image: nginx
        ports:
          - containerPort: 3306
