networking/netshoot.yaml
apiVersion: v1
kind: Pod
metadata:
  name: netshoot
  namespace: netlab
spec:
  containers:
  - name: netshoot
    image: nicolaka/netshoot
    command: ["sleep", "3600"]
