networking/tester.yml
apiVersion: v1
kind: Pod

metadata:
  name: tester
  namespace: netlab

spec:
  containers:
    - name: tester
      image: busybox
      command: ["sleep", "3600`"]
