networking/backend-svc.yml
apiVersion: v1
kind: Service

metadata:
  name: backend-svc
  namespace: netlab

spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 80
