networking/db-svc.yml
apiVersion: v1
kind: Service

metadata: 
  name: db-svc 
  namespace: netlab

spec:
  selector:
    app: db 
  ports:
  - port: 80
    targetPort: 3306
