networking/frontend-svc.yml
apiVersion: v1
kind: Service

metadata:
  name: frontend-svc
  namespace: netlab

spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
