networking/db-isolate.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: isolate-db
  namespace: netlab

spec: 
  podSelector:
    matchLabels:
      app: db
  policyTypes:
    - Ingress
    - Egress
